merged with cam 1.0.6-SNAPSHOT.